--- a/CSB/CSB/Master/TrangChu.Master
+++ b/CSB/CSB/Master/TrangChu.Master
@@ -190,6 +190,9 @@
     <div id="loader" class="lds-dual-ring overlay"></div>
     <script src="../Scripts/jquery-3.4.1.slim.min.js"></script>
     <script src="../Scripts/jquery-3.4.1.min.js"></script>
+    <script>
+        var linkapi = "http://localhost:8082/api/";
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
