--- a/CSB/CSB/Master/TrangChu.Master
+++ b/CSB/CSB/Master/TrangChu.Master
@@ -127,10 +127,10 @@
             <div class="rightContent">
                 <div class="mainMenu">
                     <ul>
-                        <li><a class="a_menu" href="#">VÙNG 1</a></li>
-                        <li><a class="a_menu" href="#">VÙNG 2</a></li>
-                        <li><a class="a_menu" href="#">VÙNG 3</a></li>
-                        <li><a class="a_menu" href="#">VÙNG 4</a></li>
+                        <li><a id="Vung1" onclick="click_vung1()" class="a_menu" href="../Page_Master/Manage_ship">VÙNG 1</a></li>
+                        <li><a id="Vung2" onclick="click_vung2()" class="a_menu" href="../Page_Master/Manage_ship">VÙNG 2</a></li>
+                        <li><a id="Vung3" onclick="click_vung3()" class="a_menu" href="../Page_Master/Manage_ship">VÙNG 3</a></li>
+                        <li><a id="Vung4" onclick="click_vung4()" class="a_menu" href="../Page_Master/Manage_ship">VÙNG 4</a></li>
                         <li><a class="a_menu" href="#">CÁC ĐƠN VỊ TRỰC THUỘC</a></li>
                         <li id="li_infor_login">
                             <div class="dropdown" >
@@ -191,7 +191,10 @@
     <script src="../Scripts/jquery-3.4.1.slim.min.js"></script>
     <script src="../Scripts/jquery-3.4.1.min.js"></script>
     <script>
-        var linkapi = "http://localhost:8082/api/";
+        var linkapi = "http://localhost:8081/api/";
+    </script>
+    <script>
+        var vung_number = 1;
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
@@ -211,5 +214,7 @@
     <script src="https://cdn.datatables.net/responsive/2.2.3/js/responsive.bootstrap4.min.js"></script>
     <script src="../Scripts/js/Master.js"></script>
     <script src="../Scripts/js/Manage_User.js"></script>
+    <script src="../Scripts/js/Manage_ship.js"></script>
+    
 </body>
 </html>
