--- a/CSB/CSB/Master/TrangChu.Master
+++ b/CSB/CSB/Master/TrangChu.Master
@@ -214,7 +214,71 @@
     <script src="https://cdn.datatables.net/responsive/2.2.3/js/responsive.bootstrap4.min.js"></script>
     <script src="../Scripts/js/Master.js"></script>
     <script src="../Scripts/js/Manage_User.js"></script>
-    <script src="../Scripts/js/Manage_ship.js"></script>
-    
+<%--    <script src="../Scripts/js/Manage_ship.js"></script>--%>
+     <script>
+         $(document).ready(function () {
+             loadDataListShips();
+         });
+         function loadDataListShips() {
+             $.ajax({
+                 type: "GET",
+                 url: linkapi + "ships?region=1",
+                 dataType: "json",
+                 beforeSend: function () { // Before we send the request, remove the .hidden class from the spinner and default to inline-block.
+                     $('#loader').removeClass('hidden');
+                 },
+                 success: function (data) {
+                     var tabletext = "<thead><tr><th>STT</th><th>TÊN TÀU</th><th>SỐ HIỆU</th><th>SỐ THUYỀN VIÊN</th><th>NĂM HẠ THỦY</th><th>TRỌNG TẢI</th><th>TỐC ĐỘ</th><th>TG HÀNH TRÌNH TỐI ĐA</th><th>TÁC VỤ</th></tr></thead><tbody>";
+                     var i = 1;
+                     $.each(data, function (key, item) {
+                         debugger;
+                         tabletext += "<tr><td>" + i + "</td><td>" + item.Ship.Name + "</td><td>" + item.Ship.RegistrationNumber + "</td><td>" + item.Ship.Personel + "</td><td>" + item.Ship.LaunchYear + "</td><td>" + item.Ship.Weight + "</td><td>" + item.Ship.Speed + "</td><td>" + item.Ship.Time + '</td><td><button class="btn btn-info btn_ViewInforShip" onclick="ViewInforShip(`' + item.Ship.Name + '`,`' + item.Ship.RegistrationNumber + '`,`' + item.Ship.RegistrationPlace + '`,`' + item.Ship.RegistrationDate + '`,`' + item.Ship.LaunchYear + '`,`' + item.Ship.Weight + '`,`' + item.Ship.Fuel + '`,`' + item.Ship.Water + '`,`' + item.Ship.Personel + '`,`' + item.Ship.Captain + '`,`' + item.Ship.Speed + '`,`' + item.Ship.Time + '`,`' + item.Ship.Created + '`)" data-toggle="modal" data-target="#model-infordetail-ship"  style="padding: 0;"> <i class="fas fa-edit icon_action" title="Xem thông tin chi tiết" ></i></button><button class="btn btn-info btn_ViewEquipment" style="padding: 0;"><i class="fas fa-trash-alt icon_action" title="Xoá thông tin"></i></button></td></tr>';
+                         i = i + 1;
+                     });
+                     tabletext += "</tbody>";
+                     $('#tableship').html(tabletext);
+                     console.log("okGET");
+                     loadTableShip();
+                 }, error: function (ret) {
+                     console.log('errorGET');
+                 },
+                 complete: function () { // Set our complete callback, adding the .hidden class and hiding the spinner.
+                     $('#loader').addClass('hidden');
+                     $('#model-edit-user').addClass('hidden');
+                 },
+             });
+         };
+         function ViewInforShip(Name, RegistrationNumber, RegistrationPlace, RegistrationDate, LaunchYear, Weight, Fuel, Water, Personel, Captain, Speed, Time, Created) {
+             debugger;
+             $("#TenTau").val(Name);
+         }
+         function loadTableShip() {
+             $('table[id=tableship]').each(function () {
+                 var table1 = $(this).DataTable({
+                     'destroy': true,
+                     lengthChange: false,
+                     "language": {
+                         "sProcessing": "Đang xử lý...",
+                         "sLengthMenu": "Xem _MENU_ mục",
+                         "sZeroRecords": "Không tìm thấy thông tin phù hợp",
+                         "sInfo": "Đang xem _START_ đến _END_ trong tổng số _TOTAL_ mục",
+                         "sInfoEmpty": "Đang xem 0 đến 0 trong tổng số 0 mục",
+                         "sInfoFiltered": "(được lọc từ _MAX_ mục)",
+                         "sInfoPostFix": "",
+                         "sSearch": "Tìm kiếm: ",
+                         "sUrl": "",
+                         "oPaginate": {
+                             "sFirst": "Đầu",
+                             "sPrevious": "Trước",
+                             "sNext": "Tiếp",
+                             "sLast": "Cuối"
+                         }
+                     }
+                 });
+                 table1.buttons().container()
+                     .appendTo('this_wrapper .col-md-6:eq(0)');
+             });
+         };
+     </script>
 </body>
 </html>
