--- a/CSB/CSB/Master/TrangChu.Master
+++ b/CSB/CSB/Master/TrangChu.Master
@@ -123,26 +123,26 @@
                 </div>
             </div>
 
-
+            <input id="vung" type="hidden" value="1"/>
             <div class="rightContent">
                 <div class="mainMenu">
                     <ul>
-                        <li><a id="Vung1" onclick="click_vung1()" class="a_menu" href="../Page_Master/Manage_ship">VÙNG 1</a></li>
-                        <li><a id="Vung2" onclick="click_vung2()" class="a_menu" href="../Page_Master/Manage_ship">VÙNG 2</a></li>
-                        <li><a id="Vung3" onclick="click_vung3()" class="a_menu" href="../Page_Master/Manage_ship">VÙNG 3</a></li>
-                        <li><a id="Vung4" onclick="click_vung4()" class="a_menu" href="../Page_Master/Manage_ship">VÙNG 4</a></li>
+                        <li><a id="Vung1" onclick="click_vung(1)" class="a_menu" href="../Page_Master/Manage_ship">VÙNG 1</a></li>
+                        <li><a id="Vung2" onclick="click_vung(2)" class="a_menu" href="../Page_Master/Manage_ship">VÙNG 2</a></li>
+                        <li><a id="Vung3" onclick="click_vung(3)" class="a_menu" href="../Page_Master/Manage_ship">VÙNG 3</a></li>
+                        <li><a id="Vung4" onclick="click_vung(4)" class="a_menu" href="../Page_Master/Manage_ship">VÙNG 4</a></li>
                         <li><a class="a_menu" href="#">CÁC ĐƠN VỊ TRỰC THUỘC</a></li>
                         <li id="li_infor_login">
                             <div class="dropdown" >
                                 
                                 <button type="button" id="btn_Infor_Login" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
-                                     <i class="bi bi-person-circle icon_account"> Dương Văn Tuyên</i>
+                                    <i id="user-login-fullname" class="bi bi-person-circle icon_account"> Dương Văn Tuyên</i>
                                 </button>
                                
                                 <div class="dropdown-menu" id="menu_infor_login">
                                     <a class="dropdown-item" href="#"><i class="bi bi-info-circle icon_menu_account"> Thông tin tài khoản</i></a>
                                     <a class="dropdown-item" href="#"><i class="bi bi-unlock-fill icon_menu_account"> Đổi mật khẩu</i> </a>
-                                    <a class="dropdown-item" href="#"><i class="bi bi-box-arrow-in-left icon_menu_account"> Đăng xuất</i> </a>
+                                    <a class="dropdown-item" href="#" onclick="clickDangXuat()"><i class="bi bi-box-arrow-in-left icon_menu_account "id="btnDangXuat"> Đăng xuất</i> </a>
                                 </div>
                             </div>
                         </li>
@@ -191,7 +191,7 @@
     <script src="../Scripts/jquery-3.4.1.slim.min.js"></script>
     <script src="../Scripts/jquery-3.4.1.min.js"></script>
     <script>
-        var linkapi = "http://localhost:8081/api/";
+        var linkapi = "http://localhost:8082/api/";
     </script>
     <script>
         var vung_number = 1;
@@ -215,70 +215,29 @@
     <script src="../Scripts/js/Master.js"></script>
     <script src="../Scripts/js/Manage_User.js"></script>
 <%--    <script src="../Scripts/js/Manage_ship.js"></script>--%>
-     <script>
-         $(document).ready(function () {
-             loadDataListShips();
-         });
-         function loadDataListShips() {
-             $.ajax({
-                 type: "GET",
-                 url: linkapi + "ships?region=1",
-                 dataType: "json",
-                 beforeSend: function () { // Before we send the request, remove the .hidden class from the spinner and default to inline-block.
-                     $('#loader').removeClass('hidden');
-                 },
-                 success: function (data) {
-                     var tabletext = "<thead><tr><th>STT</th><th>TÊN TÀU</th><th>SỐ HIỆU</th><th>SỐ THUYỀN VIÊN</th><th>NĂM HẠ THỦY</th><th>TRỌNG TẢI</th><th>TỐC ĐỘ</th><th>TG HÀNH TRÌNH TỐI ĐA</th><th>TÁC VỤ</th></tr></thead><tbody>";
-                     var i = 1;
-                     $.each(data, function (key, item) {
-                         debugger;
-                         tabletext += "<tr><td>" + i + "</td><td>" + item.Ship.Name + "</td><td>" + item.Ship.RegistrationNumber + "</td><td>" + item.Ship.Personel + "</td><td>" + item.Ship.LaunchYear + "</td><td>" + item.Ship.Weight + "</td><td>" + item.Ship.Speed + "</td><td>" + item.Ship.Time + '</td><td><button class="btn btn-info btn_ViewInforShip" onclick="ViewInforShip(`' + item.Ship.Name + '`,`' + item.Ship.RegistrationNumber + '`,`' + item.Ship.RegistrationPlace + '`,`' + item.Ship.RegistrationDate + '`,`' + item.Ship.LaunchYear + '`,`' + item.Ship.Weight + '`,`' + item.Ship.Fuel + '`,`' + item.Ship.Water + '`,`' + item.Ship.Personel + '`,`' + item.Ship.Captain + '`,`' + item.Ship.Speed + '`,`' + item.Ship.Time + '`,`' + item.Ship.Created + '`)" data-toggle="modal" data-target="#model-infordetail-ship"  style="padding: 0;"> <i class="fas fa-edit icon_action" title="Xem thông tin chi tiết" ></i></button><button class="btn btn-info btn_ViewEquipment" style="padding: 0;"><i class="fas fa-trash-alt icon_action" title="Xoá thông tin"></i></button></td></tr>';
-                         i = i + 1;
-                     });
-                     tabletext += "</tbody>";
-                     $('#tableship').html(tabletext);
-                     console.log("okGET");
-                     loadTableShip();
-                 }, error: function (ret) {
-                     console.log('errorGET');
-                 },
-                 complete: function () { // Set our complete callback, adding the .hidden class and hiding the spinner.
-                     $('#loader').addClass('hidden');
-                     $('#model-edit-user').addClass('hidden');
-                 },
-             });
-         };
-         function ViewInforShip(Name, RegistrationNumber, RegistrationPlace, RegistrationDate, LaunchYear, Weight, Fuel, Water, Personel, Captain, Speed, Time, Created) {
-             debugger;
-             $("#TenTau").val(Name);
-         }
-         function loadTableShip() {
-             $('table[id=tableship]').each(function () {
-                 var table1 = $(this).DataTable({
-                     'destroy': true,
-                     lengthChange: false,
-                     "language": {
-                         "sProcessing": "Đang xử lý...",
-                         "sLengthMenu": "Xem _MENU_ mục",
-                         "sZeroRecords": "Không tìm thấy thông tin phù hợp",
-                         "sInfo": "Đang xem _START_ đến _END_ trong tổng số _TOTAL_ mục",
-                         "sInfoEmpty": "Đang xem 0 đến 0 trong tổng số 0 mục",
-                         "sInfoFiltered": "(được lọc từ _MAX_ mục)",
-                         "sInfoPostFix": "",
-                         "sSearch": "Tìm kiếm: ",
-                         "sUrl": "",
-                         "oPaginate": {
-                             "sFirst": "Đầu",
-                             "sPrevious": "Trước",
-                             "sNext": "Tiếp",
-                             "sLast": "Cuối"
-                         }
-                     }
-                 });
-                 table1.buttons().container()
-                     .appendTo('this_wrapper .col-md-6:eq(0)');
-             });
-         };
-     </script>
+    <script>
+        $(document).ready(function () {
+            if (sessionStorage.getItem("userLoginUsername") != null) {
+                $('#user-login-fullname').text(" " + sessionStorage.getItem("userLoginFullname"));
+                $('#btnDangXuat').text(" Đăng xuất");
+            }
+            else {
+                $('#user-login-fullname').text(" Người dùng X");
+                $('#btnDangXuat').text(" Đăng nhập");
+            }
+        });
+
+        function clickDangXuat() {
+            if (sessionStorage.getItem("userLoginUsername") != null) {
+                sessionStorage.removeItem("userLoginUsername");
+                sessionStorage.removeItem("userLoginFullname");
+                sessionStorage.removeItem("userLoginID");
+            }
+            window.location = "http://localhost:44347/Page_Master/Login";
+        }
+        function click_vung(vung) {
+            $('#vung').val(vung);
+        }
+    </script>
 </body>
 </html>
