--- a/CSB/CSB/css/manage_ship.css
+++ b/CSB/CSB/css/manage_ship.css
@@ -709,8 +709,10 @@ table tr:hover .table-links {
 
 .btn_ViewEquipment{
     margin-left: 5px;
+    width: 30px;
 }
 
 .btn_ViewInforShip {
-    margin-left: 10px;
+    margin-left: 5px;
+    width: 30px;
 }
