--- a/CSB/CSB/Master/TrangChu.Master
+++ b/CSB/CSB/Master/TrangChu.Master
@@ -123,7 +123,6 @@
                 </div>
             </div>
 
-            <input id="vung" type="hidden" value="1"/>
             <div class="rightContent">
                 <div class="mainMenu">
                     <ul>
@@ -193,9 +192,6 @@
     <script>
         var linkapi = "http://localhost:8082/api/";
     </script>
-    <script>
-        var vung_number = 1;
-    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
@@ -236,7 +232,8 @@
             window.location = "http://localhost:44347/Page_Master/Login";
         }
         function click_vung(vung) {
-            $('#vung').val(vung);
+            sessionStorage.setItem("vung", vung);
+            window.location = "http://localhost:44347/Page_Master/Manage_ship";
         }
     </script>
 </body>
