--- a/CSB/CSB/Master/LayoutAdmin.Master
+++ b/CSB/CSB/Master/LayoutAdmin.Master
@@ -25,7 +25,7 @@
 	<link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.bootstrap4.min.css">
 
     <!-- Template Main CSS File -->
-    <link href="../css/LayoutAdmin.css" rel="stylesheet" />
+<%--    <link href="../css/LayoutAdmin.css" rel="stylesheet" />--%>
 
     <!-- fas fa icon CSS-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
@@ -5361,7 +5361,7 @@ table tr:hover .table-links {
     <script src="../Scripts/jquery-3.4.1.slim.min.js"></script>
     <script src="../Scripts/jquery-3.4.1.min.js"></script>
     <script>
-        var linkapi = "http://localhost:8082/api/";
+        var linkapi = "http://localhost:8081/api/";
         var baseaddress = "http://localhost:44347/";
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
