--- a/CSB/CSB/Master/LayoutAdmin.Master
+++ b/CSB/CSB/Master/LayoutAdmin.Master
@@ -6,9 +6,6 @@
 <head runat="server">
     <title></title>
     <!-- Google Fonts -->
-    <link href="https://fonts.gstatic.com" rel="preconnect">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-    1
     <!-- Vendor CSS Files -->
     <link href="../css/bootstrap.min.css" rel="stylesheet" />
     <link href="../Content/bootstrap-icons.css" rel="stylesheet" />
@@ -16,10 +13,8 @@
     <link href="../Content/quill.snow.css" rel="stylesheet" />
     <link href="../Content/quill.bubble.css" rel="stylesheet" />
     <link href="../Content/remixicon.css" rel="stylesheet" />
-
     <!-- Datatables CSS -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.css">
     <link href="../Content/dataTables.bootstrap4.min.css" rel="stylesheet" />
     <link href="../Content/buttons.bootstrap4.min.css" rel="stylesheet" />
     <link href="../Content/responsive.bootstrap4.min.css" rel="stylesheet" />
@@ -28,8 +23,7 @@
 <%--    <link href="../css/LayoutAdmin.css" rel="stylesheet" />--%>
 
     <!-- fas fa icon CSS-->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link href="../Content/MaterialIcons.css" rel="stylesheet" />
     <link href="../Content/font-awesome.min.css" rel="stylesheet" />
 
     <!-- Table icon CSS -->
@@ -57,6 +51,16 @@
         }
         table.table td a.lock i {
             font-size: 21px;
+        }
+        a.view {
+            color: #03A9F4;
+            margin-top: 10px;
+            font-size: 19px;
+        }
+        a.add {
+            color: #FFC107;
+            margin-top: 10px;
+            font-size: 19px;
         }
     </style>
 
@@ -2210,10 +2214,10 @@ h6 .badge {
     top: 0;
     left: 250px;
     width: calc(100% - 250px);
-    height: 115px;
+    height: 93px;
     background-image: url('../Image/header.jpg');
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: 100% 100%;
     z-index: -1;
 }
 
@@ -5302,10 +5306,10 @@ table tr:hover .table-links {
         <section class="section" style="margin-bottom: 20px;z-index: 2;">
             <div class="mainMenu">
                     <ul style="padding-inline-start: 20px;">
-                        <li><a id="Vung1" onclick="click_vung(1)" class="a_menu" href="../Page_Master/Manage_ship?vung=1">VÙNG 1</a></li>
-                        <li><a id="Vung2" onclick="click_vung(2)" class="a_menu" href="../Page_Master/Manage_ship?vung=2">VÙNG 2</a></li>
-                        <li><a id="Vung3" onclick="click_vung(3)" class="a_menu" href="../Page_Master/Manage_ship?vung=3">VÙNG 3</a></li>
-                        <li><a id="Vung4" onclick="click_vung(4)" class="a_menu" href="../Page_Master/Manage_ship?vung=4">VÙNG 4</a></li>
+                        <li><a id="Vung1"  class="a_menu" href="../Page_Master/Manage_ship?vung=1">VÙNG 1</a></li>
+                        <li><a id="Vung2"  class="a_menu" href="../Page_Master/Manage_ship?vung=2">VÙNG 2</a></li>
+                        <li><a id="Vung3"  class="a_menu" href="../Page_Master/Manage_ship?vung=3">VÙNG 3</a></li>
+                        <li><a id="Vung4"  class="a_menu" href="../Page_Master/Manage_ship?vung=4">VÙNG 4</a></li>
                         <li><a class="a_menu" href="../Page_Master/Null.aspx">CÁC ĐƠN VỊ TRỰC THUỘC</a></li>
                         <li id="li_infor_login">
                             <div class="dropdown" >
@@ -5333,11 +5337,11 @@ table tr:hover .table-links {
   <!-- ======= Footer ======= -->
    <footer class="main-footer">
         <div class="footer-left">
-            Copyright &copy; 2022 <div class="bullet"></div>  Thiết kế bởi <a href="../Page_Master/Null.aspx">Khoa Công Nghệ Thông Tin</a>
+            Copyright &copy; 2022 <div class="bullet"></div>  Thiết kế bởi <a href="../Page_Master/Null.aspx">Nhóm phát triển phần mềm HVKTQS</a>
         </div>
         <br />
         <div class="footer-left">
-            Học viện Kĩ thuật quân sự, Bắc Từ Liêm, Hà Nội
+           236 Hoàng Quốc Việt, Bắc Từ Liêm, Hà Nội
         </div>
     </footer><!-- End Footer -->
 
@@ -5360,7 +5364,7 @@ table tr:hover .table-links {
 
     <!-- ===== JS =====-->
     <script>
-        var linkapi = "http://localhost:8081/api/";
+        var linkapi = "http://localhost:8082/api/";
         var baseaddress = "http://localhost:44347/";
     </script>
     <script src="../Scripts/jquery-3.4.1.slim.min.js"></script>
@@ -5393,6 +5397,7 @@ table tr:hover .table-links {
             else {
                 $('#user-login-fullname').text(" Người dùng X");
                 $('#btnDangXuat').text(" Đăng nhập");
+                window.location = baseaddress + "Page_Master/Login";
             }
         });
 
